# CloverBootloader

./: .gitignore  .gitmodules  Build_Clover_Tahoe.md  Build_Clover_in_Sequoia.txt  Clover.dsc  Clover.fdf  Clover32.dsc  Clover32.fdf  Clover64.dsc  Clover64.fdf  Clover64Common.dsc  Clover64Common.fdf  Clover64MCP.dsc  Clover64MCP.fdf  CloverIa32.dsc  CloverPkg.dec  CloverVC.sln  CloverVC.vcxproj  CloverVC.vcxproj.filters  CloverX64.dsc  CloverX64.fdf  Clover_Duet.command  Clover_Duet.tool  Clover_cpp.dsc  CreatingRevision.txt  DuetPkg.fdf  DuetPkg64.fdf  DuetPkgIa32.dsc  DuetPkgX64.dsc  LICENSE  MPService.c  MdeModulePkg-Modded.dec  MdeModulePkg.dec  PostBuild.bat  PostBuild.sh  PostBuildClang.sh  PostBuildDuet.sh  PostBuildUnix.sh  README.md  Readme.md  (+61 more)
.github/: CONTRIBUTING.md  CONTRIBUTING_Version3.md  PULL_REQUEST_TEMPLATE.md  README.md  README_Version3.md  github_ISSUE_TEMPLATE_bug_report_Version3.md  github_PULL_REQUEST_TEMPLATE_Version3.md
AcpiReset/: Reset.c
AcpiTables/: AcpiTables.c  AcpiTables.inf  DevicePath.c  InternalBdsLib.h  lib.c  lib.h  libeg.h
AppleImageCodec/: AppleImageCodec.c  AppleImageCodec.inf  load_bmp.c  load_icns.c  picopng-old.c  picopng.c  picopng.h
AtaAtapi/: AhciMode.c  AhciMode.h  AtaAtapiPassThru.c  AtaAtapiPassThru.h  AtaAtapiPassThru.inf  IdeMode.c  IdeMode.h
AtaBus/: AtaBus.c  AtaBus.h  AtaBusDxe.inf  AtaPassThruExecute.c  ComponentName.c
BaseTools/: .cproject  .project  BaseTools.cpp  Change_to_BaseTools.txt  Makefile
BiosKeyboard/: BiosKeyboard.c  BiosKeyboard.h  ComponentName.c  KeyboardDxe.inf  LegacyBiosThunk.c
BiosThunk/: LegacyBiosThunk.c  LegacyBiosThunk.dxs  LegacyBiosThunk.h  LegacyBiosThunk.inf
BiosVideo/: BiosVideo.c  BiosVideo.h  BiosVideo.inf  BiosVideoNew.c  LegacyBiosThunk.c  VesaBiosExtensions.h
BiosVideoAuto/: BiosVideo.h  BiosVideoNew.c  edid.c  (+1 more)
CloverApp/Clover/ThemeManager/libimagequant/: CHANGELOG  Cargo.toml  Makefile  README.md  config.mk  example.c  kmeans.c  lodepng.c  lodepng.h  mediancut.c  nearest.c
CloverApp/Clover/ThemeManager/libimagequant/libimagequant-mac.xcodeproj/: project.pbxproj
CloverApp/Clover/ThemeManager/libimagequant/org/pngquant/: LiqObject.java  PngQuant.c  PngQuant.java
CloverApp/Clover/ThemeManager/libimagequant/rust-sys/: build.rs
CloverApp/libimagequant-2.12.6/rust-api/: Cargo.toml
(+5089 files in other folders)
