[package]
categories = ["multimedia::images"]
description = "Convert 24/32-bit images to 8-bit palette with alpha channel.\nBindings for libimagequant that powers pngquant lossy PNG compressor.\n\nDual-licensed like pngquant. See https://pngquant.org for details."
documentation = "https://docs.rs/imagequant"
homepage = "https://pngquant.org/lib/"
include = ["src/*", "examples/*", "COPYRIGHT", "Cargo.toml", "README.md"]
keywords = ["quantization", "palette", "image", "pngquant", "compression"]
authors = [ "Kornel <kornel@pngquant.org>" ]
license = "GPL-3.0+"
name = "imagequant"
readme = "README.md"
repository = "https://github.com/ImageOptim/libimagequant"
version = "2.12.6"
edition = "2018"

[dependencies]
imagequant-sys = { version = "2.12.6", path = "../" }
libc = "0.2.60"

[features]
default = ["sse"]
sse = ["imagequant-sys/sse"]
openmp = ["imagequant-sys/openmp"]
openmp-static = ["openmp", "imagequant-sys/openmp-static"]

[lib]
name = "imagequant"
